--- a/src/webapp/src/Containers/Hosts/styles.module.css
+++ b/src/webapp/src/Containers/Hosts/styles.module.css
@@ -1,8 +1,6 @@
 .hosts {
-  display: flex;
-  flex-direction: column;
+  @apply flex flex-col overflow-y-auto;
   height: calc(100% - 30px);
-  overflow-y: auto;
   padding-top: 15px;
   padding-left: 15px;
   padding-right: 15px;
@@ -11,9 +9,4 @@
   @apply border-2 border-primary rounded-md bg-secondary placeholder-base px-4 flex content-center items-center italic;
   flex: 1;
   min-height: 40px;
-}
-.searchAdd {
-  @apply flex flex-row content-center items-center p-2 hover:bg-primary m-2 rounded-md;
-  max-width: 45px;
-  flex: 1;
 }
